--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,8 @@ stages:
 deploy_to_heroku:
   stage: deploy
   script:
-    - git remote add heroku https://heroku:$API_KEY@git.heroku.com/proyecto-datos.git
+    - git remote add heroku https://git.heroku.com/proyecto-datos.git
     - git branch
     - git checkout master
-    - heroku login
     - git push heroku master
 
