--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,15 @@
+before_script:
+    - apt-get update -qy
+    - apt-get install -y ruby-dev
+    - gem install dpl
+
 stages:
-  - deploy
+    - production
 
-
-deploy_to_heroku:
-  stage: deploy
-  script:
-    - git remote add heroku https://git.heroku.com/proyecto-datos.git
-    - git branch
-    - git checkout master
-    - git push heroku master
+production:
+    type: deploy
+    stage: production
+    image: ruby:latest
+    script:
+        - dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_API_KEY
 
